[gd_scene load_steps=21 format=3 uid="uid://jvesylio1e8a"]

[ext_resource type="Script" uid="uid://clk5e86tbfmtu" path="res://Player/Script/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://cgdpmgboj1nik" path="res://Player/Script/head.gd" id="2_btcbx"]
[ext_resource type="Script" uid="uid://do1mptub73e66" path="res://Player/Script/dots.gd" id="3_btcbx"]
[ext_resource type="PackedScene" uid="uid://d10mry05245k8" path="res://Player/ItemPlayer/Hand/GunPlaceholder/senjata.tscn" id="3_gwnis"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k53q1"]
shading_mode = 2
albedo_color = Color(0.972182, 0.572969, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4ntmi"]
radial_segments = 4
rings = 1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_btcbx"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_fhl08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Senjata:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.28107, 3.13636, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Senjata:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.06, -0.095, -0.11)]
}

[sub_resource type="Animation" id="Animation_k53q1"]
resource_name = "attach"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Senjata:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.28107, 3.13636, 0), Vector3(-0.0698132, 3.13636, 0), Vector3(0, 3.13636, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Senjata:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.06, -0.095, -0.035), Vector3(-0.06, -0.095, -0.11), Vector3(-0.06, -0.095, -0.095)]
}

[sub_resource type="Animation" id="Animation_gwnis"]
resource_name = "walk"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Senjata:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.13636, 0), Vector3(0.0872665, 3.13636, 0.0436332), Vector3(0, 3.13636, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Senjata:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.06, -0.095, -0.095), Vector3(-0.06, -0.105, -0.095), Vector3(-0.06, -0.095, -0.095)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtle1"]
_data = {
&"RESET": SubResource("Animation_fhl08"),
&"attach": SubResource("Animation_k53q1"),
&"walk": SubResource("Animation_gwnis")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_btcbx"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.840929, 0.210691, 0.714016, 0.282353)

[sub_resource type="BoxMesh" id="BoxMesh_btcbx"]
size = Vector3(0.24, 0.24, 0.24)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gwnis"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0, 0.792367, 0.945953, 1)

[sub_resource type="BoxMesh" id="BoxMesh_k53q1"]
material = SubResource("StandardMaterial3D_gwnis")
size = Vector3(0.03, 0.03, 0.705)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fhl08"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.996746, 0.229507, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_vtle1"]
material = SubResource("StandardMaterial3D_fhl08")
size = Vector3(0.03, 0.03, 0.705)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_od3ui"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.323402, 0.691715, 7.70092e-07, 1)

[sub_resource type="BoxMesh" id="BoxMesh_00tjw"]
material = SubResource("StandardMaterial3D_od3ui")
size = Vector3(0.03, 0.03, 0.705)

[sub_resource type="LabelSettings" id="LabelSettings_4ntmi"]
font_size = 22

[node name="Player" type="CharacterBody3D" groups=["entity", "player"]]
velocity = Vector3(0, 0, -0.0205316)
script = ExtResource("1_l8h54")
size_strach = 1
max_move = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_k53q1")
mesh = SubResource("CapsuleMesh_4ntmi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_btcbx")

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("2_btcbx")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -1000)

[node name="Senjata" parent="Head/Camera3D" instance=ExtResource("3_gwnis")]
transform = Transform3D(-0.999986, 0.00501461, 0.00149493, 0, 0.28569, -0.958322, -0.0052327, -0.958308, -0.285686, -0.06, -0.095, -0.11)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_vtle1")
}
playback_default_blend_time = 0.5

[node name="Dots" type="MeshInstance3D" parent="Head" node_paths=PackedStringArray("player_root", "label_position", "upnode", "head")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
top_level = true
material_override = SubResource("StandardMaterial3D_btcbx")
mesh = SubResource("BoxMesh_btcbx")
script = ExtResource("3_btcbx")
player_root = NodePath("../..")
label_position = NodePath("../../CanvasLayer/Panel/VBoxContainer/Position")
upnode = NodePath("../../UpNode")
head = NodePath("..")

[node name="ZAxis" type="MeshInstance3D" parent="Head/Dots"]
mesh = SubResource("BoxMesh_k53q1")

[node name="XAxis" type="MeshInstance3D" parent="Head/Dots"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_vtle1")

[node name="YAxis" type="MeshInstance3D" parent="Head/Dots"]
transform = Transform3D(1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_00tjw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 33.0
offset_top = 34.0
offset_right = 564.0
offset_bottom = 243.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.5
offset_top = -91.0
offset_right = 224.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Akselrasi" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(317.53, 58.59)
layout_mode = 2
text = "Speed: 0.02053163573146"
label_settings = SubResource("LabelSettings_4ntmi")
vertical_alignment = 1
autowrap_mode = 1

[node name="Rotasi" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(317.53, 58.59)
layout_mode = 2
text = "Speed: 0.02053163573146"
label_settings = SubResource("LabelSettings_4ntmi")
vertical_alignment = 1
autowrap_mode = 1

[node name="Position" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(317.53, 58.59)
layout_mode = 2
text = "Speed: 0.02053163573146"
label_settings = SubResource("LabelSettings_4ntmi")
vertical_alignment = 1
autowrap_mode = 1

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -354.0
offset_top = -112.0
offset_right = -49.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0

[node name="Max_move" type="Label" parent="CanvasLayer/Panel2"]
custom_minimum_size = Vector2(317.53, 58.59)
layout_mode = 0
text = "Speed: 0.02053163573146"
label_settings = SubResource("LabelSettings_4ntmi")
vertical_alignment = 1
autowrap_mode = 1

[node name="MapScaleStatus" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -357.0
offset_top = 41.0
offset_right = -52.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="MapScaleStatusLabel" type="Label" parent="CanvasLayer/MapScaleStatus"]
custom_minimum_size = Vector2(317.53, 58.59)
layout_mode = 0
text = "Speed: 0.02053163573146"
label_settings = SubResource("LabelSettings_4ntmi")
vertical_alignment = 1
autowrap_mode = 1

[node name="UpNode" type="RayCast3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, -36.58, 0)
